[package]
name = "foxstack-ads1293"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.15.0"
byteorder = "1.5.0"
embedded-hal = "1.0.0"
enum_variant_type = "0.3.1"
#onlyerror = "0.1.4"
# thiserror = "1.0.57"
log = { version = "0.4.21", features = [] }
ux = "0.1.5"
#strum = { version = "0.26", features = ["derive"] }
